--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
  <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width">
-     <title></title>
-     <link rel="stylesheet" href="style.css">
+     <title>sunao_portfolio</title>
+     <link rel="stylesheet" href="./css/style.css">
 <body>
+
+    <header>
+        <div class="logo">
+          <a href="index.html"><img src="images/logo.png" alt="sunaologo"></a>
+        </div>
+        <nav>
+          <ul class="global-nav">
+            <li><a href="">About</a></li>
+            <li><a href="">Portfolio</a></li>
+            <li><a href="">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
 
 
 
